[tool.poetry]
name = "beancount-multitool"
version = "0.2.1"
description = "A CLI tool that converts financial data to Beancount files"
authors = ["Rick Lan <rlan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rlan/beancount-multitool"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: Japanese",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
click = "^8.1.7"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"
black = "^24.4.2"
flake8 = "^7.0.0"

[tool.poetry.scripts]
bean-mt = "beancount_multitool.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
