[tool.poetry]
name = "beancount-multitool"
version = "0.3.0"
description = "A CLI tool that converts financial data to Beancount files"
authors = ["Rick Lan <rlan@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rlan/beancount-multitool"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Natural Language :: Japanese",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial :: Accounting",
  "Topic :: Office/Business :: Financial :: Investment",
  "Topic :: Text Processing :: General",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
click = "^8.1.7"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^4.0"

[tool.poetry.scripts]
bean-mt = "beancount_multitool.cli:main"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "F", "B"]

# 2. Avoid enforcing line-length violations (`E501`)
ignore = ["E501"]

# 3. Avoid trying to fix flake8-bugbear (`B`) violations.
unfixable = ["B"]

# 4. Ignore `E402` (import violations) in all `__init__.py` files, and in select subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.format]
docstring-code-format = true
